Support decrement of single sample.

When originally written, stored samples generally didn't get
decremented but a change from storing total/logged to unlogged/logged
means a subtraction within stored samples.  The single-sample was
optimized assuming an increment-only model and so doing the
subtraction would cause the realization of the full sample set
even when only one bucket was being utilized.

Also, add dedicated unit-test for AtomicSingleSample.

Bug: 756549
Change-Id: I0a96e83dd2c1c288c3890ac9b05f3763dc6be3d4